WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208147
Context menu platter animation is wrong occasionally when invoking it repeatedly and rapidly
https://bugs.webkit.org/show_bug.cgi?id=208147
Summary
Context menu platter animation is wrong occasionally when invoking it repeate...
Tim Horton
Reported
2020-02-24 11:00:57 PST
Context menu platter animation is wrong occasionally when invoking it repeatedly and rapidly
Attachments
Patch
(2.38 KB, patch)
2020-02-24 11:01 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-02-24 11:01:04 PST
Created
attachment 391558
[details]
Patch
Tim Horton
Comment 2
2020-02-24 11:01:06 PST
<
rdar://problem/54436720
>
WebKit Commit Bot
Comment 3
2020-02-24 13:51:55 PST
Comment on
attachment 391558
[details]
Patch Clearing flags on attachment: 391558 Committed
r257242
: <
https://trac.webkit.org/changeset/257242
>
WebKit Commit Bot
Comment 4
2020-02-24 13:51:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug