Context menu platter animation is wrong occasionally when invoking it repeatedly and rapidly https://bugs.webkit.org/show_bug.cgi?id=208147 <rdar://problem/54436720>

Reviewed by Wenson Hsieh.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView contextMenuInteraction:willEndForConfiguration:animator:]):
If a new context menu interaction has started, don't remove the hint
container view out from under it when the previous animation finishes,
or the presentation animation will go crazy (in a variety of humorous
and unpredictable ways), because UIKit can't do coordinate conversion
through an unparented view.

Eventually the final animation will complete and unparent the view.


Canonical link: https://commits.webkit.org/221092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257242 268f45cc-cd09-0410-ab3c-d52691b4dbfc